# fem

./: .travis.yml  CMakeLists.txt  README.md  README.rst
cmake/: DownloadProject.cmake  FindPETSC.cmake  FindSLEPC.cmake
doc/: CMakeLists.txt  main.md
src/: CMakeLists.txt  Poisson.ufl  main.cpp
src/utils/: CMakeLists.txt  utils.cpp
tests/: CMakeLists.txt  test_poisson.cpp
